proyecto1/ide/src/main/java/antlr/AvengerParser.java
// Generated from C:/Users/gabri/OneDrive - Universidad Rafael Landivar/Quinto Semestre/Compiladores/ParserCompis1S/proyecto1/src/main/java/antlr/Avenger.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AvengerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STARK=1, BANNER=2, ROGERS=3, THOR=4, BOB=5, VISION=6, WANDA=7, LOKI=8, 
		FURY=9, GAMORA=10, NEBULA=11, RECRUIT=12, ASSEMBLE=13, RETURN=14, JARVIS=15, 
		PARKER=16, ODIN=17, NOJARVIS=18, JARVISJARVIS=19, PLUS=20, MINUS=21, MULT=22, 
		DIV=23, LPAREN=24, RPAREN=25, LBRACE=26, RBRACE=27, SEMI=28, COMMA=29, 
		BOOL_THOR=30, NUMERO_BANNER=31, NUMERO_STARK=32, STRING_ROGERS=33, IDENTIFICADOR=34, 
		WS=35, COMMENT=36;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_tipoVar = 2, RULE_param = 3, RULE_condition = 4, 
		RULE_expr = 5, RULE_primary = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "tipoVar", "param", "condition", "expr", "primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'stark'", "'banner'", "'rogers'", "'thor'", "'bob'", "'vision'", 
			"'wanda'", "'loki'", "'fury'", "'gamora'", "'nebula'", "'recruit'", "'assemble'", 
			"'return'", "'jarvis'", "'<'", "'>'", "'!='", "'=='", "'+'", "'-'", "'*'", 
			"'/'", "'('", "')'", "'{'", "'}'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STARK", "BANNER", "ROGERS", "THOR", "BOB", "VISION", "WANDA", 
			"LOKI", "FURY", "GAMORA", "NEBULA", "RECRUIT", "ASSEMBLE", "RETURN", 
			"JARVIS", "PARKER", "ODIN", "NOJARVIS", "JARVISJARVIS", "PLUS", "MINUS", 
			"MULT", "DIV", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", 
			"BOOL_THOR", "NUMERO_BANNER", "NUMERO_STARK", "STRING_ROGERS", "IDENTIFICADOR", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Avenger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AvengerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AvengerParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17179901822L) != 0)) {
				{
				{
				setState(14);
				statement();
				}
				}
				setState(19);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(20);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtReturnContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(AvengerParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtReadContext extends StatementContext {
		public TerminalNode GAMORA() { return getToken(AvengerParser.GAMORA, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtReadContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtRead(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtFuncDeclContext extends StatementContext {
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AvengerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AvengerParser.RBRACE, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AvengerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AvengerParser.COMMA, i);
		}
		public StmtFuncDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtFuncDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtFuncDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtAssembleContext extends StatementContext {
		public TerminalNode ASSEMBLE() { return getToken(AvengerParser.ASSEMBLE, 0); }
		public TerminalNode STRING_ROGERS() { return getToken(AvengerParser.STRING_ROGERS, 0); }
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtAssembleContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtAssemble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtAssemble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtAssemble(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtWhileContext extends StatementContext {
		public TerminalNode LOKI() { return getToken(AvengerParser.LOKI, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AvengerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AvengerParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StmtWhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtWriteContext extends StatementContext {
		public TerminalNode NEBULA() { return getToken(AvengerParser.NEBULA, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtWriteContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtWrite(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtImportContext extends StatementContext {
		public TerminalNode RECRUIT() { return getToken(AvengerParser.RECRUIT, 0); }
		public TerminalNode STRING_ROGERS() { return getToken(AvengerParser.STRING_ROGERS, 0); }
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtImportContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtForContext extends StatementContext {
		public TerminalNode FURY() { return getToken(AvengerParser.FURY, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(AvengerParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(AvengerParser.IDENTIFICADOR, i);
		}
		public List<TerminalNode> JARVIS() { return getTokens(AvengerParser.JARVIS); }
		public TerminalNode JARVIS(int i) {
			return getToken(AvengerParser.JARVIS, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(AvengerParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(AvengerParser.SEMI, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AvengerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AvengerParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StmtForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtFor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtAssignContext extends StatementContext {
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode JARVIS() { return getToken(AvengerParser.JARVIS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtVarDeclContext extends StatementContext {
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode JARVIS() { return getToken(AvengerParser.JARVIS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public StmtVarDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtFuncDeclVoidContext extends StatementContext {
		public TerminalNode BOB() { return getToken(AvengerParser.BOB, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AvengerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AvengerParser.RBRACE, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AvengerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AvengerParser.COMMA, i);
		}
		public StmtFuncDeclVoidContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtFuncDeclVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtFuncDeclVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtFuncDeclVoid(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtIfContext extends StatementContext {
		public TerminalNode VISION() { return getToken(AvengerParser.VISION, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(AvengerParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(AvengerParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(AvengerParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(AvengerParser.RBRACE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode WANDA() { return getToken(AvengerParser.WANDA, 0); }
		public StmtIfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtIf(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtFuncCallContext extends StatementContext {
		public TerminalNode IDENTIFICADOR() { return getToken(AvengerParser.IDENTIFICADOR, 0); }
		public TerminalNode LPAREN() { return getToken(AvengerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AvengerParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(AvengerParser.SEMI, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AvengerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AvengerParser.COMMA, i);
		}
		public StmtFuncCallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).enterStmtFuncCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvengerListener ) ((AvengerListener)listener).exitStmtFuncCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvengerVisitor ) return ((AvengerVisitor<? extends T>)visitor).visitStmtFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new StmtVarDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				tipoVar();
				setState(23);
				match(IDENTIFICADOR);
				setState(24);
				match(JARVIS);
				setState(25);
				expr(0);
				setState(26);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new StmtAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(28);
				match(IDENTIFICADOR);
				setState(29);
				match(JARVIS);
				setState(30);
				expr(0);
				setState(31);
				match(SEMI);
				}
				break;
			case 3:
				_localctx = new StmtIfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				match(VISION);
				setState(34);
				match(LPAREN);
				setState(35);
				condition();
				setState(36);
				match(RPAREN);
				setState(37);
				match(LBRACE);
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17179901822L) != 0)) {
					{
					{
					setState(38);
					statement();
					}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(44);
				match(RBRACE);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WANDA) {
					{
					setState(45);
					match(WANDA);
					setState(46);
					match(LBRACE);
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17179901822L) != 0)) {
						{
						{
						setState(47);
						statement();
						}
						}
						setState(52);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(53);
					match(RBRACE);
					}
				}
